# University-Projects

./: .gitignore  LOGIC.ipynb  README.md
Bazy-Danych/: LICENSE
Erlang/: .gitignore
Java/: .gitignore
NN/Rozpoznawanie tekstu z obrazu/: .gitignore  CMakeLists.txt  show_pic.py
NN/Rozpoznawanie tekstu z obrazu/results/: wyniki pracy.tex
NN/Rozpoznawanie tekstu z obrazu/src/: ActualConvSigmoidLayer.cpp  ActualConvSigmoidLayer.h  AdditionLayer.cpp  AdditionLayer.h  ConvSigmoidLayer.cpp  ConvSigmoidLayer.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  Layer.cpp  Layer.h  LogisticRegressor.cpp  LogisticRegressor.h  Matrix2D.cpp  Matrix2D.h  MaxPoolLayer.cpp  MaxPoolLayer.h  ReLULayer.cpp  ReLULayer.h  SigmoidLayer.cpp  SigmoidLayer.h  SoftMaxLayer.cpp  SoftMaxLayer.h  image_generator.py  main.cpp  plan pracy.txt
NN/Rozpoznawanie tekstu z obrazu/src/weights_backup/: l1.txt  l2.txt  l3.txt  l4.txt  l5.txt  l6.txt
NN/Rozpoznawanie tekstu z obrazu/test/: AdditionLayerTest.h  ConvSigmoidLayerTest.h  LayerTest.h  LogisticRegressorTest.h  Matrix2DTest.h  MaxPoolLayerTest.h  ReLULayerTest.h  SigmoidLayerTest.h  TestSuite.cpp  assert.h
SR/zad1/: CMakeLists.txt  Message.h  Token.h  TokenRingClient.cpp  TokenRingClient.h  main.cpp  mqueue.cpp  mqueue.h
Zad1/: LOGIC.py
Zad2/: main.py  print_on_screen.py  sample.json
Zad3/: README.md  db.sqlite3  manage.py
code/: dbo.AddConference.StoredProcedure.sql  dbo.AddCorporateCustomer.StoredProcedure.sql  dbo.AddParticipant.StoredProcedure.sql  dbo.AddReservation.StoredProcedure.sql  dbo.AllConferences.View.sql  dbo.AllCustomersWithAddresses.View.sql  dbo.CancelReservation.StoredProcedure.sql  dbo.ConferenceDayPrice.Table.sql  dbo.CorporateCustomersWithAddress.View.sql  dbo.CustomersWithPayments.View.sql  dbo.EventsForConference.StoredProcedure.sql  dbo.Ewaluacja.StoredProcedure.sql  dbo.ModifyConferenceDay.StoredProcedure.sql  dbo.MostLoyalCompanies.View.sql  dbo.MostPopularEvents.View.sql  dbo.ParticipantListForEvent.StoredProcedure.sql  dbo.Payment.Table.sql  dbo.PaymentsForCustomer.StoredProcedure.sql  dbo.RemoveAddress.StoredProcedure.sql  dbo.RemoveConferenceDayPrice.StoredProcedure.sql  dbo.Reservation.Table.sql  (+23 more)
mownit2/Lab1/: CMakeLists.txt
mownit2/Lab1/zad1/: main.cpp
mownit2/Lab1/zad2/: main.cpp
mownit2/Lab1/zad3/: main.cpp
mownit2/Lab1/zad4/: main.cpp
(+479 files in other folders)
